--- a/templates/error.tmpl
+++ b/templates/error.tmpl
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<link rel="icon"
-      type="image/png"
-      href="/img/favicon.ico" />
+<link rel="icon" type="image/png" href="/favicon.ico" />
 <html>
   <head>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/_main.css">
   </head>
   <body>
     <h1>{{ .message }}</h1>
