Customize html templates further

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -19,8 +19,13 @@
 </head>
 <body class="bkgd">
 <div id="header">
+&nbsp;
 <img src="/_logo.png" alt="SEA9"/></a>
 <div id="title">SEA9.ORG</div>
+<div id="infmn">
+<div id="k">&nbsp;</div>
+<div id="z">&nbsp;</div>
+</div>
 </div>
 <div id="content">
 <h1>{{ .Msg }}</h1>
