Customize html templates for cdi

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="icon" type="image/png" href="{{ .DocumentRoot }}/static/img/favicon.ico" />
-    <link rel="stylesheet" href="{{ .DocumentRoot }}/static/css/main.css" />
-    <meta name="robots" content="noindex, nofollow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=7"
-    />
-    <title>Vouch Proxy - {{ .Msg }}</title>
-  </head>
-  <body>
-<div class="top">
-  <a href="https://github.com/vouch/vouch-proxy"><img src="{{ .DocumentRoot }}/static/img/multicolor_V_500x500.png"/></a>
-  <a href="https://github.com/vouch/vouch-proxy"><span>Vouch Proxy</span></a>
+<head>
+<title>CDI API Documentation - {{ .Msg }}</title>
+<meta name="robots" content="noindex, nofollow" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=7" />
+<link rel="icon" type="image/png" href="/api/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="/api/favicon-16x16.png" sizes="16x16" />
+<link rel="stylesheet" href="/api/swagger-ui.css" />
+<style>
+  html {
+    box-sizing: border-box;
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: scroll;
+  }
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  body {
+    margin:0;
+    background: #fafafa;
+  }
+</style>
+</head>
+<body>
+<div class="swagger-ui">
+<div style="margin-left: 14px;">
+<h1 style="margin-bottom: 0;">CDI API Documentation</h1>
+<p style="margin-top: 5px; margin-left: 5px; font-size: 0.8em;">
+  <a href="/api">Home</a>
+</p>
 </div>
-
-<div class="content">
-<h1>{{ .Msg }}</h1>
-
+<div id="consent" class="wrapper">
+<hr>
+<h2 style="margin-bottom: 14px;">{{ .Msg }}</h2>
 {{ if .Testing }}
 <p class="test">
 <h2>-- test mode --</h2>
 The config file includes <code>testing: true</code>
 <p/>
 All 302 redirects will be captured and presented as links here
-
-
 <ul>
   <li><a href="{{ .DocumentRoot }}/login">login</a></li>
   <li><a href="{{ .DocumentRoot }}/logout">logout</a></li>
@@ -40,12 +52,11 @@ All 302 redirects will be captured and presented as links here
 {{ end }}
 </ul>
 {{ end }}
-<div class="bottom">
-For support, please contact your network administrator or whomever configured Nginx to use Vouch Proxy.
-<p/>
-For help with <a href="https://github.com/vouch/vouch-proxy">Vouch Proxy</a> or to file a bug report, please visit <a href="https://github.com/vouch/vouch-proxy">https://github.com/vouch/vouch-proxy</a>
-<p/>
+<hr>
+<div>
+<p style="margin-left: 5px; padding-bottom: 14px; font-size: 0.8em;">© 2022 HKICL</p>
 </div>
 </div>
-  </body>
+</div>
+</body>
 </html>
