--- a/templates/error.tmpl
+++ b/templates/error.tmpl
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<link rel="icon"
-      type="image/png"
-      href="/img/favicon.ico" />
+<link rel="icon" type="image/png" href="/api/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="/api/favicon-16x16.png" sizes="16x16" />
 <html>
   <head>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/api/swagger-ui.css">
   </head>
   <body>
     <h1>{{ .message }}</h1>
