--- a/templates/auth.tmpl
+++ b/templates/auth.tmpl
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<link rel="icon" type="image/png" href="/api/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="/api/favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
 <html>
   <head>
-    <link rel="stylesheet" href="/api/swagger-ui.css">
+    <link rel="stylesheet" href="/swagger-ui.css">
   </head>
   <body>
       <a href="{{ .link }}"><button>Login with Google!</button></a>
