--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -6,9 +6,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=7" />
-<link rel="icon" type="image/png" href="/api/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="/api/favicon-16x16.png" sizes="16x16" />
-<link rel="stylesheet" href="/api/swagger-ui.css" />
+<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+<link rel="stylesheet" href="/swagger-ui.css" />
 <style>
   html {
     box-sizing: border-box;
